# sokrates-kafka-viz

./: .gitignore  README.md  kafka_viz_config.yaml  pyproject.toml  requirements.txt  setup.py  sokrates.yaml
.github/workflows/: ci-cd.yml  python-test.yml  test.yml
docs/: advanced_patterns.md  extending-visualizations.md  visualization-guide.md
kafka_viz/: __init__.py  cli.py  kafka_analyzer.py  logging_config.py  models.py
kafka_viz/analyzers/: __init__.py  analyzer.py  analyzer_manager.py  avro_analyzer.py  base.py  base_analyzer.py  dependency_analyzer.py  java_analyzer.py  kafka_analyzer.py  service_analyzer.py  service_level_base.py  service_name_extractors.py  spring_analyzer.py
kafka_viz/analyzers/frameworks/: spring.py
kafka_viz/models/: __init__.py  kafka_topic.py  schema.py  service.py  service_collection.py  service_registry.py
kafka_viz/visualization/: __init__.py  architecture_viz.py  base.py  factory.py  index_generator.py  kafka_viz.py  mermaid.py  simple_viz.py  utils.py
kafka_viz/visualization/resources/: README.md  config.json
kafka_viz/visualization/resources/templates/index/: index.html  styles.css
kafka_viz/visualization/resources/templates/mermaid/: mermaid.html
kafka_viz/visualization/resources/templates/react/: app.js  index.html  simulation.worker.js  styles.css
kafka_viz/visualization/ressources/templates/: app.js  index.html  styles.css
scripts/: analyze.py  kafka_pattern_finder.py  parse_avro.py  visualize.py
sokrates_kafka_viz/: cli.py  kafka_analyzer.py  logging_config.py
sokrates_kafka_viz/analyzers/: __init__.py  avro.py  dependency.py  java_analyzer.py  kafka.py  service.py
sokrates_kafka_viz/core/: analyzer.py  config.py  errors.py  runner.py  schemas.py  state.py
src/analyzers/: java_analyzer.py
src/kafka_viz/analyzers/: avro.py  patterns.py
src/kafka_viz/core/: analyzer.py
src/kafka_viz/utils/: config.py  logging.py
src/sokrates/: __init__.py  dto_analyzer.py
src/sokrates/core/: container.py  models.py
tests/: conftest.py  test_advanced_patterns.py  test_analyzer_manager.py  test_integration.py  test_java_analyzer.py  test_kafka_analyzer.py  test_schema.py  test_visualization_smoke.py
tests/analyzers/: test_service_registry.py
tests/data/: OrderProducer.java  application.properties
tests/data/csharp_service/: KafkaPatternTest.cs
tests/data/java/advanced/: CollectionConsumer.java  RecordProducer.java
tests/data/java_service/: KafkaPatternTest.java  pom.xml
tests/data/spring_service/src/main/resources/: application.yml
tests/integration/: test_analysis.py  test_integration.py  test_service_level_analysis.py
tests/test_analyzers/: test_advanced_patterns.py  test_analyzer_manager.py  test_avro_analyzer.py  test_base.py  test_frameworks.py  test_java_analyzer.py  test_kafka_analyzer.py  test_service_analyzer.py  test_service_level_analyzer.py  test_service_name_extractors.py  test_service_registry.py  test_spring_analyzer.py
tests/test_data/java/advanced/: ContainerConfig.java  StreamProcessor.java
tests/test_data/java_service/: KafkaPatternTest.java  pom.xml
tests/test_data/java_service/src/main/java/com/example/: OrderConsumer.java  OrderProducer.java
tests/test_data/python_service/: kafka_client.py  kafka_pattern_test.py
tests/test_models/: test_service.py  test_topic.py
(+1 files in other folders)
