[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kafka-viz"
version = "0.1.0"
description = "Tool for visualizing Kafka microservices architecture using static code analysis"
requires-python = ">=3.8"
authors = [
    {name = "Emil Holmegaard", email = "emilholmegaard@gmail.com"}
]
dynamic = ["dependencies"]

[project.scripts]
kafka-viz = "kafka_viz.cli:app"

[tool.setuptools]
packages = ["kafka_viz"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "networkx>=3.1.0",
    "javalang>=0.13.0",
    "requests>=2.32.0",
    "types-requests>=2.32.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true